Fix on safari

--- a/style/styleindex.css
+++ b/style/styleindex.css
@@ -19,8 +19,7 @@ main {
 #imgmain {
     -webkit-max-width: 700px;
     max-width: 700px;
-    height: auto;
-    -webkit-height: auto;
+    max-height: 700px;
     display: flex;
     overflow: hidden;
 }
